--- a/tasmota-ccc/rootfs/etc/nginx/locations/root.conf
+++ b/tasmota-ccc/rootfs/etc/nginx/locations/root.conf
@@ -1,4 +1,7 @@
 location /  {
     root /var/www/tasmota-ccc;
     index /index.html;
+
+    expires off;
+    add_header Cache-Control "no-store";
 }
