--- a/tasmota-ccc/config.yaml
+++ b/tasmota-ccc/config.yaml
@@ -2,7 +2,7 @@
 version: 0.1.5
 slug: tasmota_ccc
 name: Tasmota proxy and update 
-panel_icon: mdi:wifi
+panel_icon: mdi:home-automation
 panel_title: Tasmota proxy
 description: Access and update your Tasmota devices through Home Assistant
 url: https://github.com/lmagyar/homeassistant-addon-tasmota-ccc
