--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -19,4 +19,5 @@ jobs:
         args: |
           --test \
           --${{ matrix.arch }} \
+          --no-cache \
           --target tasmota-ccc
