--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -30,4 +30,5 @@ jobs:
           --${{ matrix.arch }} \
           --target tasmota-ccc \
           --cosign \
+          --no-cache \
           --docker-hub ghcr.io/${{ github.actor }}
