Configure log format for the add-on

--- a/tasmota-ccc/Dockerfile
+++ b/tasmota-ccc/Dockerfile
@@ -11,3 +11,9 @@ RUN \
 
 # Copy root filesystem
 COPY rootfs /
+
+# Environment variables
+ENV \
+    # Add-on log format
+    LOG_FORMAT="{TIMESTAMP} {LEVEL}: {MESSAGE}" \
+    LOG_TIMESTAMP="%Y/%m/%d %H:%M:%S"
